Short story share bitmap changes + Instagram sharing + bug/crash fixes

--- a/MyCity4Kids/MyCity4Kids/res/layout/add_short_story_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_short_story_activity.xml
@@ -46,12 +46,19 @@
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
+    <View
+        android:id="@+id/toolbarUnderline"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/toolbar"
+        android:background="@color/light_underline" />
+
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/topicHeading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
-        android:padding="8dp"
+        android:layout_below="@+id/toolbarUnderline"
+        android:padding="10dp"
         android:text="@string/short_s.choose_genre"
         android:textSize="16sp"
         app:fontName="georgia.ttf" />
@@ -87,13 +94,14 @@
         android:id="@+id/underline"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_below="@+id/storyTitleEditText"
         android:background="@color/light_underline" />
 
     <com.mycity4kids.widget.CustomFontEditText
         android:id="@+id/storyBodyEditText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/storyTitleEditText"
+        android:layout_below="@+id/underline"
         android:background="@null"
         android:gravity="top|left"
         android:hint="@string/short_s.add.body_hint"
