--- a/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
@@ -179,6 +179,7 @@
                         app:fontName="open_sans.ttf" />
 
                     <ImageView
+                        android:id="@+id/likeImageView"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:paddingBottom="12dp"
