--- a/MyCity4Kids/MyCity4Kids/res/layout/user_published_short_stories_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_published_short_stories_list_item.xml
@@ -5,16 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="100dp">
 
-    <!--<ImageView-->
-    <!--android:id="@+id/articleImageView"-->
-    <!--android:layout_width="70dp"-->
-    <!--android:layout_height="45dp"-->
-    <!--android:layout_alignParentLeft="true"-->
-    <!--android:layout_marginBottom="10dp"-->
-    <!--android:layout_marginLeft="15dp"-->
-    <!--android:layout_marginTop="15dp"-->
-    <!--android:src="@drawable/default_article" />-->
-
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/txvArticleTitle"
         android:layout_width="match_parent"
@@ -46,45 +36,43 @@
         android:textSize="11sp"
         app:fontName="oswald_regular.ttf" />
 
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/viewCountTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txvPublishDate"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:drawableLeft="@drawable/ic_views"
-        android:drawablePadding="4dp"
-        android:gravity="center"
-        android:paddingLeft="2dp"
-        android:text="0"
-        android:textColor="@color/article_listing.stats"
-        android:textSize="14sp"
-        app:fontName="open_sans.ttf" />
+    <!--<com.mycity4kids.widget.CustomFontTextView-->
+        <!--android:id="@+id/viewCountTextView"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/txvPublishDate"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:drawableLeft="@drawable/ic_views"-->
+        <!--android:drawablePadding="4dp"-->
+        <!--android:gravity="center"-->
+        <!--android:paddingLeft="2dp"-->
+        <!--android:text="0"-->
+        <!--android:textColor="@color/article_listing.stats"-->
+        <!--android:textSize="14sp"-->
+        <!--app:fontName="open_sans.ttf" />-->
 
-    <View
-        android:id="@+id/separatorView1"
-        android:layout_width="1dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/viewCountTextView"
-        android:layout_alignTop="@+id/viewCountTextView"
-        android:layout_marginBottom="3dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="3dp"
-        android:layout_toEndOf="@+id/viewCountTextView"
-        android:layout_toRightOf="@+id/viewCountTextView"
-        android:background="@color/common_underline" />
+    <!--<View-->
+        <!--android:id="@+id/separatorView1"-->
+        <!--android:layout_width="1dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignBottom="@+id/viewCountTextView"-->
+        <!--android:layout_alignTop="@+id/viewCountTextView"-->
+        <!--android:layout_marginBottom="3dp"-->
+        <!--android:layout_marginLeft="5dp"-->
+        <!--android:layout_marginStart="5dp"-->
+        <!--android:layout_marginTop="3dp"-->
+        <!--android:layout_toEndOf="@+id/viewCountTextView"-->
+        <!--android:layout_toRightOf="@+id/viewCountTextView"-->
+        <!--android:background="@color/common_underline" />-->
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/commentCountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/viewCountTextView"
-        android:layout_alignTop="@+id/viewCountTextView"
-        android:layout_below="@id/txvAuthorName"
-        android:layout_marginLeft="11dp"
-        android:layout_toRightOf="@+id/viewCountTextView"
+        android:layout_below="@+id/txvPublishDate"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
         android:drawableLeft="@drawable/ic_comments"
         android:drawablePadding="4dp"
         android:gravity="center"
@@ -97,8 +85,8 @@
         android:id="@+id/separatorView2"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/viewCountTextView"
-        android:layout_alignTop="@+id/viewCountTextView"
+        android:layout_alignBottom="@+id/commentCountTextView"
+        android:layout_alignTop="@+id/commentCountTextView"
         android:layout_marginBottom="3dp"
         android:layout_marginLeft="5dp"
         android:layout_marginStart="5dp"
@@ -111,9 +99,8 @@
         android:id="@+id/recommendCountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/viewCountTextView"
-        android:layout_alignTop="@+id/viewCountTextView"
-        android:layout_below="@id/txvAuthorName"
+        android:layout_below="@+id/txvPublishDate"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="11dp"
         android:layout_toRightOf="@+id/commentCountTextView"
         android:drawableLeft="@drawable/ic_likes"
