--- a/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
@@ -105,7 +105,9 @@
                         android:drawableLeft="@drawable/ic_search"
                         android:drawablePadding="10dp"
                         android:drawableTint="@color/groups.grey"
+                        android:ellipsize="end"
                         android:hint=""
+                        android:lines="1"
                         android:textColor="@color/user_activities.toolbar.title"
                         android:textColorHint="@color/groups.grey"
                         android:textSize="20sp"
