--- a/MyCity4Kids/MyCity4Kids/res/layout/add_gp_post_comment_reply_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_gp_post_comment_reply_fragment.xml
@@ -37,6 +37,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:padding="10dp"
                 android:text="@string/groups.post_label"
                 android:textColor="@color/ad.comments.toolbar.title"
                 android:textSize="20sp"
