--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_reported_content_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_reported_content_activity.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fab="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -38,54 +38,9 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar" />
-
-    <com.getbase.floatingactionbutton.FloatingActionButton
-        android:id="@+id/openAddCommentDialog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="right|bottom"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        app:fab_colorNormal="@color/groups.blue_color"
-        app:fab_colorPressed="@color/groups.blue_color"
-        app:fab_icon="@drawable/ic_add_comments" />
-
-
-    <!--<com.mycity4kids.widget.CustomFontEditText-->
-    <!--android:id="@+id/writeCommentEditText"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentBottom="true"-->
-    <!--android:layout_toLeftOf="@+id/addCommentImageView"-->
-    <!--android:background="@null"-->
-    <!--android:hint="Add a comment"-->
-    <!--android:minHeight="48dp"-->
-    <!--android:paddingLeft="6dp"-->
-    <!--android:paddingRight="6dp"-->
-    <!--android:textColor="@color/groups.light_black_color" />-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/addCommentImageView"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="49dp"-->
-    <!--android:layout_alignParentBottom="true"-->
-    <!--android:layout_alignParentRight="true"-->
-    <!--android:background="@color/groups.blue_color"-->
-    <!--android:paddingLeft="16dp"-->
-    <!--android:paddingRight="16dp"-->
-    <!--android:src="@drawable/ic_gp_add_response" />-->
-
-    <!--<View-->
-    <!--android:id="@+id/topLineView"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="1dp"-->
-    <!--android:layout_above="@+id/writeCommentEditText"-->
-    <!--android:layout_toLeftOf="@+id/addCommentImageView"-->
-    <!--android:background="@color/light_underline" />-->
+        android:layout_below="@+id/toolbar"
+        android:clipToPadding="false"
+        android:paddingBottom="60dp" />
 
     <RelativeLayout
         android:id="@+id/postSettingsContainerMain"
@@ -101,7 +56,7 @@
             android:layout_alignParentTop="true"
             android:alpha="0.85"
             android:background="#121212"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <LinearLayout
             android:id="@+id/postSettingsContainer"
@@ -112,7 +67,7 @@
             android:visibility="gone">
 
             <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/savePostTextView"
+                android:id="@+id/noActionTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/notificationToggleTextView"
@@ -120,13 +75,13 @@
                 android:drawableLeft="@drawable/ic_bookmark"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="SAVE POST"
+                android:text="No Action Required"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 app:fontName="open_sans.ttf" />
 
             <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/notificationToggleTextView"
+                android:id="@+id/hideContentTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/commentToggleTextView"
@@ -134,13 +89,13 @@
                 android:drawableLeft="@drawable/ic_bookmark"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="ENABLE NOTIFICATION"
+                android:text="Hide Content"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 app:fontName="open_sans.ttf" />
 
             <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/commentToggleTextView"
+                android:id="@+id/blockUserTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/reportPostTextView"
@@ -148,31 +103,10 @@
                 android:drawableLeft="@drawable/ic_bookmark"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="DISABLE COMMENTS"
-                android:textColor="@color/groups.light_black_color"
-                android:textSize="16sp"
-                app:fontName="open_sans.ttf" />
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/reportPostTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:drawableLeft="@drawable/ic_bookmark"
-                android:drawablePadding="20dp"
-                android:padding="20dp"
-                android:text="REPORT POST"
+                android:text="Block This User"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 app:fontName="open_sans.ttf" />
         </LinearLayout>
     </RelativeLayout>
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:elevation="6dp"
-        android:visibility="gone" />
 </RelativeLayout>
