--- a/MyCity4Kids/MyCity4Kids/res/layout/report_image_poll_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/report_image_poll_post_item.xml
@@ -318,145 +318,43 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <!--<com.mycity4kids.widget.CustomFontTextView-->
-    <!--android:id="@+id/upvoteTextView"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/lastOptionsContainer"-->
-    <!--android:layout_marginTop="15dp"-->
-    <!--android:drawableLeft="@drawable/fav_icon"-->
-    <!--android:drawablePadding="5dp"-->
-    <!--android:gravity="bottom"-->
-    <!--android:text="20 Helpful"-->
-    <!--android:textColor="@color/groups.light_black_color"-->
-    <!--android:textSize="10sp"-->
-    <!--app:fontName="oswald.ttf" />-->
-
-    <!--<com.mycity4kids.widget.CustomFontTextView-->
-    <!--android:id="@+id/downvoteTextView"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/lastOptionsContainer"-->
-    <!--android:layout_marginLeft="5dp"-->
-    <!--android:layout_marginTop="15dp"-->
-    <!--android:layout_toRightOf="@+id/upvoteTextView"-->
-    <!--android:drawableLeft="@drawable/fav_icon"-->
-    <!--android:drawablePadding="5dp"-->
-    <!--android:gravity="bottom"-->
-    <!--android:text="0 Not Helpful"-->
-    <!--android:textColor="@color/ad.comment.date"-->
-    <!--android:textSize="10sp"-->
-    <!--app:fontName="oswald.ttf" />-->
-
-    <LinearLayout
-        android:id="@+id/upvoteContainer"
-        android:layout_width="wrap_content"
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/reportedSpamTextView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/lastOptionsContainer"
-        android:layout_marginTop="15dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/upvoteImageVIew"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:src="@drawable/ic_upvote" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/upvoteTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:gravity="center"
-            android:text="20 Helpful"
-            android:textColor="@color/groups.grey"
-            android:textSize="12sp"
-            app:fontName="oswald.ttf" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/downvoteContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/lastOptionsContainer"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="16dp"
-        android:layout_toRightOf="@+id/upvoteContainer"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/downvoteImageVIew"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:src="@drawable/ic_downvote" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/downvoteTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:gravity="center"
-            android:text="20 Helpful"
-            android:textColor="@color/groups.grey"
-            android:textSize="12sp"
-            app:fontName="oswald.ttf" />
-    </LinearLayout>
-
-    <!--<com.mycity4kids.widget.CustomFontTextView-->
-    <!--android:id="@+id/postCommentsTextView"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/lastOptionsContainer"-->
-    <!--android:layout_marginRight="10dp"-->
-    <!--android:layout_marginTop="10dp"-->
-    <!--android:layout_toLeftOf="@+id/shareTextView"-->
-    <!--android:drawablePadding="5dp"-->
-    <!--android:drawableRight="@drawable/ic_comments"-->
-    <!--android:gravity="bottom"-->
-    <!--android:padding="5dp"-->
-    <!--android:text="20"-->
-    <!--android:textColor="@color/ad.comment.date"-->
-    <!--android:textSize="12sp"-->
-    <!--app:fontName="oswald.ttf" />-->
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:text="Reported as Spam - 100"
+        android:visibility="gone" />
 
     <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/postCommentsTextView"
-        android:layout_width="wrap_content"
+        android:id="@+id/reportedAbuseTextView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lastOptionsContainer"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_toLeftOf="@+id/addCommentImageView"
-        android:gravity="bottom"
-        android:padding="5dp"
-        android:text="20 Comments"
-        android:textColor="@color/groups.blue_color"
-        android:textSize="12sp"
-        app:fontName="oswald.ttf" />
+        android:layout_below="@+id/reportedSpamTextView"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:text="Reported as Abuse - 2000"
+        android:visibility="gone" />
 
-    <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/addCommentImageView"
-        android:layout_width="wrap_content"
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/reportedUninterestingTextView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lastOptionsContainer"
-        android:layout_marginRight="4dp"
-        android:layout_marginTop="10dp"
-        android:layout_toLeftOf="@+id/shareTextView"
-        android:padding="5dp"
-        android:src="@drawable/ic_comments"
-        android:tint="@color/groups.blue_color" />
+        android:layout_below="@+id/reportedAbuseTextView"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:text="Reported as Not Interesting - 2"
+        android:visibility="gone" />
 
-    <ImageView
-        android:id="@+id/shareTextView"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/lastOptionsContainer"
-        android:layout_marginTop="10dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="5dp"
-        android:src="@drawable/ic_share_white"
-        android:tint="@color/ad.follow_following_text" />
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/reportedOtherTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/reportedUninterestingTextView"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:text="Reported as Other - 0"
+        android:visibility="gone" />
 </RelativeLayout>
